# gpu-profiling

./: .gitignore  README.md  pyproject.toml
nvidia/: use_compute_sanitizer.py
nvidia/results/: compute_sanitizer_250423_184750.json
src/gpu_profiler/: cli.py
src/gpu_profiler/config/: config.yaml
src/gpu_profiler/profilers/: hpctoolkit.py
src/gpu_profiler/profilers/amd/: rocprofiler_compute.py
src/gpu_profiler/profilers/nvidia/: compute_sanitizer.py  nsight_compute.py
